--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "firebase": "^12.1.0",
+    "formik": "^2.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
